2012-05-22  Dongwoo Im  <dw.im@samsung.com>

        [EFL] Implements the registerProtocolHandler method and option.
        https://bugs.webkit.org/show_bug.cgi?id=73638

        Reviewed by Andreas Kling.

        The registerProtocolHandler() method allows Web sites to register themselves
        as possible handlers for particular schemes.

        http://dev.w3.org/html5/spec/Overview.html#dom-navigator-registerprotocolhandler

        * platform/efl/fast/dom/register-protocol-handler-expected.txt: Added.

2012-05-22  Stephanie Lewis  <slewis@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=87208
        Unreviewed, checking in failing results.

        * platform/mac/http/tests/cookies/js-get-and-set-http-only-cookie-expected.txt: Added.

2012-05-22  MORITA Hajime  <morrita@google.com>

        REGRESSION(r116629) tests for <style scoped> is crashing
        https://bugs.webkit.org/show_bug.cgi?id=87191

        - Unskipped accidentally skipped test for <style scoped>.
        - Updated outdated expectations.

        Reviewed by Kent Tamura.

        * fast/css/style-scoped/style-scoped-in-shadow-expected.txt:
        * platform/chromium/test_expectations.txt:

2012-05-21  Shawn Singh  <shawnsingh@chromium.org>

        Improve W3C conformance of backface-visibility
        https://bugs.webkit.org/show_bug.cgi?id=84195

        Reviewed by Adrienne Walker.

        * compositing/backface-visibility-hierarchical-transform-expected.png: Removed.
        * compositing/backface-visibility/backface-visibility-3d-expected.png: Added.
        * compositing/backface-visibility/backface-visibility-3d-expected.txt: Copied from LayoutTests/compositing/backface-visibility-expected.txt.
        * compositing/backface-visibility/backface-visibility-3d.html: Added.
        * compositing/backface-visibility/backface-visibility-hierarchical-transform-expected.png: Added.