@@ -258,6 +258,24 @@ Moving mouse from shadow-host/svg-in-shadow-tree to top
 
   mouseover
      @top (target: top) (related: shadow-host)
+
+
+Composed Shadow Tree will be:
+DIV	 id=sandbox
+	DIV	 id=top
+		DIV	 id=shadow-host
+			#text	
+
+
+Moving mouse from a direct child text node of the shadow root to top
+
+  mouseout
+     @shadow-root (target: shadow-root) (related: top)
+     @shadow-host (target: shadow-host) (related: top)
+     @top (target: shadow-host) (related: top)
+
+  mouseover
+     @top (target: top) (related: shadow-host)
 PASS successfullyParsed is true
 
 TEST COMPLETE
