@@ -1,3 +1,15 @@
+2012-05-22  Hayato Ito  <hayato@chromium.org>
+
+        Remove an assertion since an event's target might be a shadow root if a text node is clicked.
+        https://bugs.webkit.org/show_bug.cgi?id=87072
+
+        Reviewed by Dimitri Glazkov.
+
+        Tests: fast/dom/shadow/shadow-dom-event-dispatching.html
+
+        * dom/ComposedShadowTreeWalker.cpp:
+        (WebCore::ComposedShadowTreeWalker::ComposedShadowTreeWalker):
+
 2012-05-22  Dongwoo Im  <dw.im@samsung.com>
 
         [EFL] Implements the registerProtocolHandler method and option.
